@@ -559,11 +559,6 @@
   // Instance level. Setting this option to "0" means no limit.
   "LimitFindInstances" : 0,
 
-  // The maximum number of active jobs in the Orthanc scheduler. When
-  // this limit is reached, the addition of new jobs is blocked until
-  // some job finishes.
-  "LimitJobs" : 10,
-
   // If this option is set to "true" (default behavior until Orthanc
   // 1.3.2), Orthanc will log the resources that are exported to other
   // DICOM modalities or Orthanc peers, inside the URI
